@@ -1,3 +1,7 @@
+2012-02-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-column-specs): Protect against TDs with "width: 0%".
+
 2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.
